<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D3D3D3"
    tools:context="com.sdsmdg.kd.trianglifyexample.MainActivity">

    <com.sdsmdg.kd.trianglify.views.TrianglifyView
        android:id="@+id/trianglify_main_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        app:bleedX="75dp"
        app:bleedY="75dp"
        app:cellSize="30dp"
        app:fillStrokes="true"
        app:fillTriangle="true"
        app:gridType="circle"
        app:palette="RdBu"
        app:randomColoring="false"
        app:randomizeFillColor="#FF0000"
        app:randomizeFillWithStatic="false"
        app:strokeSize="5.5"
        app:variance="5dp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp"
        android:background="#84FFFFFF"
        android:elevation="10dp"
        android:padding="16dp">

        <TextView
            android:id="@+id/variance_textview"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/variance"
            android:textColor="#212121" />

        <SeekBar
            android:id="@+id/variance_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@id/variance_textview" />

        <TextView
            android:id="@+id/cell_size_textview"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/variance_textview"
            android:layout_margin="4dp"
            android:text="@string/cell_size"
            android:textColor="#212121" />

        <SeekBar
            android:id="@+id/cell_size_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/variance_textview"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@id/cell_size_textview" />

        <TextView
            android:id="@+id/palette_textview"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/cell_size_textview"
            android:layout_margin="4dp"
            android:text="@string/palette"
            android:textColor="#212121" />

        <SeekBar
            android:id="@+id/palette_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cell_size_textview"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@id/palette_textview" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/palette_textview"
            android:layout_marginTop="4dp">

            <View
                android:id="@+id/layout_middle_point"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_centerInParent="true" />

            <CheckBox
                android:id="@+id/random_coloring_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/layout_middle_point"
                android:checked="false"
                android:minHeight="48dp"
                android:text="@string/random_coloring" />

            <CheckBox
                android:id="@+id/custom_palette_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/layout_middle_point"
                android:minHeight="48dp"
                android:text="@string/custom_palette" />

            <CheckBox
                android:id="@+id/draw_stroke_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/custom_palette_checkbox"
                android:layout_toStartOf="@id/layout_middle_point"
                android:minHeight="48dp"
                android:text="@string/draw_strokes" />

            <CheckBox
                android:id="@+id/draw_fill_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/random_coloring_checkbox"
                android:layout_toEndOf="@id/layout_middle_point"
                android:minHeight="48dp"
                android:text="@string/fill_triangles" />

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>
